--- a/simple_mqtt_ezville_control_pk/config.json
+++ b/simple_mqtt_ezville_control_pk/config.json
@@ -1,9 +1,9 @@
 {
-  "name": "MQTT 기반 Simple EzVille Wallpad Control",
+  "name": "mqtt ew11 send_msg",
   "version": "0.0.1",
-  "slug": "simple_mqtt_ezville_control",
-  "url": "https://github.com/ktdo79/addons",
-  "description": "MQTT 통신을 활용한 간단화된 EzVille 월패드 컨트롤러",
+  "slug": "simple_mqtt_ezville_control_pk",
+  "url": "https://github.com/kraon/addons",
+  "description": "패킷 로그 서버에 전송",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "map": [
     "share:rw"
