--- a/simple_mqtt_ezville_control_pk/config.json
+++ b/simple_mqtt_ezville_control_pk/config.json
@@ -2,7 +2,7 @@
   "name": "mqtt ew11 send_msg",
   "version": "0.0.1",
   "slug": "simple_mqtt_ezville_control_pk",
-  "url": "https://github.com/kraon/addons",
+  "url": "https://github.com/kRaon/addons",
   "description": "패킷 로그 서버에 전송",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "map": [
