--- a/simple_mqtt_ezville_control/config.json
+++ b/simple_mqtt_ezville_control/config.json
@@ -15,13 +15,13 @@
     "MQTT_LOG": false,
     "EW11_LOG": false,
     "mode": "mqtt",
-    "mqtt_server": "192.168.x.x",
-    "mqtt_id": "id",
+    "mqtt_server": "192.168.0.37",
+    "mqtt_id": "mqtt-user",
     "mqtt_password": "password",
-    "ew11_server": "192.168.x.x",
+    "ew11_server": "192.168.0.31",
     "ew11_port": 8899,
     "ew11_id": "admin",
-    "ew11_password": "elfin_password",
+    "ew11_password": "admin",
     "command_interval": 0.5,
     "command_retry_count": 30,
     "first_waittime": 0.5,
